@@ -1237,7 +1237,7 @@ name|segmentsFileName
 argument_list|,
 name|IOContext
 operator|.
-name|DEFAULT
+name|READONCE
 argument_list|)
 expr_stmt|;
 block|}
